--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -53,6 +53,11 @@
 		<div>
 			<div class="mt-4">
 				<h5>
+					<span class="badge bg-info addReply">
+						Add Reply
+					</span>
+				</h5>
+				<h5>
 					<span class="badge bg-secondary replyCount">
 						Reply Count[[${dto.replyCount}]]
 					</span>
@@ -62,15 +67,193 @@
 			</div>
 		</div>
 		
+		<div class="modal" tabindex="-1">
+         <div class="modal-dialog">
+            <div class="modal-content">
+               <div class="modal-header">
+                  <h5 class="modal-title">댓글 입력창</h5>
+                  
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"
+                     aria-label="Close"></button>
+               </div>
+               <div class="modal-body">
+
+                     <!-- 댓글 입력창 추가 -->
+                     <div class="form-group">
+                        <input type="text" class="form-control" name="replyText" placeholder="Reply Text..">
+                     </div>
+                     <!-- 댓글러 추가 -->
+                     <div class="form-group">
+                        <input type="text" class="form-control" name="replyer" placeholder="Replyer">
+                     </div>
+                     <input type="hidden" name="rno">
+               </div>
+               <div class="modal-footer">
+               <button type="button" class="btn btn-danger replySave" data-bs-dismiss="modal">Save</button>
+                  <button type="button" class="btn btn-danger replyRemove" data-bs-dismiss="modal">Remove</button>
+                  <button type="button" class="btn btn-warning replyModify">Modify</button>
+                  <button type="button" class="btn btn-outline-secondary replyClose"data-bs-dismiss="modal" >Close</button>
+               </div>
+            </div>
+         </div>
+      </div>
+		
+		<!-- 
+			모달 창에 모든 내용을 입력 후에 save 를 누르면 다음처럼 수행
+			
+			1. 클릭 이벤트를 걺
+			2. 이벤트 발생 시 데이터를 가져오는데 필요 데이터는 다음과 같음. bno, text, replyer(이 모든 키는 ReplyDTO와 같음)
+				위 세개의 키 값을 get 해서 자바스크립트 일반객체로 생성해서 변수에 담음.
+				콘솔에 출력
+			3. 값이 모두 도출되었으면 ajax 를 통해서 url:'/replies', method:post, contenttype 등
+				ajax 로 서버에 비동기 통신하는 메뉴업 찾아서 보냄
+			4. 서버에서는 이를 받아서 처리하는 컨트롤러 메소드 정의.
+				4-1. 서버에서는 이 데이터를 모두 받아서 insert 하고 결과를 json 으로 rno 값을 리턴해줌
+			5. 위 비동기 통신을 이용하면 데이터를 보냄과 동시에 결과를 받는 콜백이 존재함.
+				이 콜백을 통해 데이터를 수신해서 insert 된 rno 값을 출력.
+		 -->
+		
 		<script th:inline="javascript">
+		
+			$('.replyModify').on('click',()=>{
+				var rno = $('input[name="rno"]').val();
+				
+				let reply = {
+					rno : rno,
+					bno : [[${dto.bno}]],
+					text : $('input[name="replyText"]').val(),
+					replyer : $('input[name="replyer"]').val()
+				};
+				
+				console.log(reply);
+				
+				$.ajax({
+	    			type:'put',
+	    			url:'/replies/'+rno,
+	    			data:JSON.stringify(reply),
+	    			dataType : 'text',
+	    			contentType:'application/json; charset=uth-8',
+	    			success : function(data){
+	    				console.log(data)
+	    				if(data=="success"){
+	    					alert(rno + "댓글이 수정됨");
+    						modal.modal('hide');
+		    				location.reload(true);
+	    				}
+	    			},
+	    			error:(data)=>{
+	    				console.log(data);
+	    			}
+	    		});
+			});	
+		
+			//삭제 버튼 눌럿을 때 요청을 보내도록 스크립트 정의
+			$('.replyRemove').on('click',()=>{
+				var rno = $('input[name="rno"]').val();
+				
+				$.ajax({
+	    			type:'delete',
+	    			url:'/replies/'+rno,
+	    			success : (data)=>{
+	    				console.log(data);
+	    				if(data=='success'){
+	    					alert("댓글이 삭제됨");
+	    					modal.modal('hide');
+	    					location.reload(true);
+	    				}
+	    			}
+	    		});
+			});
+			
+			
+			
+			//특정 댓글을 클릭했을 때 삭제와 수정을 할 수 있도록 스크립트 정의
+			$('.replyList').on("click",".card-body",function(){
+				let rno = $(this).data('rno');//dataset. 모든 html 요소에 data-name="value"로 주면 이 값을 필요시에 찾아서 사용 가능.
+				
+				//modal 을 띄울때 기존 내용을 가져와서 새로 띄워야 하기에, 기존 값을 setting 함.
+				$('input[name="replyText"]').val($(this).find('.card-title').html());
+				$('input[name="replyer"]').val($(this).find('.card-subtitle').html());
+				$('input[name="rno"]').val(rno);
+				
+				$('.modal-footer .btn').show();
+			      $('.replySave').hide();//모달 내의 모든 버튼 hide
+				modal.modal('show');
+			});
+			
+			//Add Reply 클릭시 모델창 띄우기
+		      var modal = $('.modal');
+		      
+		      $('.replySave').click(function(){
+		    		
+		    		$.ajax({
+		    			type:'POST',
+		    			url:'/replies',
+		    			data:JSON.stringify({
+		    				bno : [[${dto.bno}]],
+				    		text : $('input[name=replyText]').val(),
+				    		replyer : $('input[name=replyer]').val()
+		    			}),
+		    			dataType : 'text',
+		    			contentType:'application/json',
+		    			success : function(data){
+		    				$('message').html(data);
+		    				location.reload(true);
+		    			}
+		    		});
+		      })
+		      
+		      $('.addReply').click(function(){
+		         modal.modal('show');
+		      })
+		      
+		      //댓글 부분 초기화
+		      $('input[name="replyText"]').val('');
+		      $('input[name="replyer"]').val('');
+		      
+		      $('.modal-footer .btn').hide();//모달 내의 모든 버튼 hide
+		      $('.replySave, .replyClose').show();
+		
 			$(document).ready(function(){
 				var bno = [[${dto.bno}]];
 				var listGroup = $(".replyList");
 				
+				function formatDate(str){
+					let date = new Date(str);
+					
+					return date.getFullYear() + "/" + (date.getMonth() + 1) + date.getDate() + date.getHours() + date.getMinutes();
+				}
+				
+				function loadJSONData(){
+					$.getJSON('/replies/board/'+bno, function(arr){
+						console.log(arr);
+						
+						var str = "";
+						
+						$(".replyCount").html(" Reply Count " + arr.length);
+						
+						$.each(arr,(idx,reply)=>{
+							console.log(reply);
+							str += '<div class="card-body" data-rno="'+ reply.rno+'"><b>'+reply.rno+'</b>';
+							
+							str += '<h5 class="card-title">'+reply.text+'</h5>';
+							str += '<h6 class="card-subtitle mb-2 text-muted">'+reply.replyer+'</h6>';
+							str += '<p class="card-text">'+formatDate(reply.regdate)+'</p>';
+							str += '</div>';
+						});
+						
+						listGroup.html(str);
+					});
+				}
+				
 				$(".replyCount").click(function(){
+					loadJSONData();
+					
+					/*
 					$.getJSON('/replies/board/'+bno, function(arr){
 						console.log(arr);
 					})
+					*/
 				})
 			})
 		</script>
